Made Design for Register and Log In

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,9 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
-        android:fontFamily="@font/poppins_extrabold"
+        android:fontFamily="@font/ubuntu_bold"
         android:text="@string/login"
-        android:textColor="@color/Cornflower_Blue"
+        android:textColor="@color/White"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,10 +28,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/ubuntu"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColor="@color/Emperor"
+        android:textColor="@color/White"
+        android:textColorHint="@color/Emperor"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
@@ -42,8 +43,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/email"
-        android:textColor="@color/Emperor"
+        android:textColor="@color/White"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />
@@ -54,9 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/open_sans"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/password"
-        android:textColor="@color/Emperor"
+        android:textColor="@color/White"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
@@ -68,10 +70,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/ubuntu"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:textColor="@color/Emperor"
+        android:textColor="@color/White"
+        android:textColorHint="@color/Emperor"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -81,8 +84,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/poppins"
+        android:backgroundTint="@color/blue1"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/login"
+        android:textColor="@color/White"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,14 +97,39 @@
         android:id="@+id/textViewRegisterPage"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:clickable="true"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/ubuntu_bold"
+        android:gravity="center"
         android:text="@string/register"
+        android:textColor="@color/White"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView17"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="32dp"
+        android:gravity="center"
+        android:text="Don't have an account?"
+        android:textColor="@color/White"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="107dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
