--- a/app/src/main/res/values/qh_color.xml
+++ b/app/src/main/res/values/qh_color.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="Cornflower_Blue">#715CF8</color>
-    <color name="Emperor">#545454</color>
+    <color name="White">#FFFFFF</color>
+    <color name="Emperor">#b6b8b7</color>
+
 
 
 
