--- a/app/src/main/res/layout/recycler_employer_job.xml
+++ b/app/src/main/res/layout/recycler_employer_job.xml
@@ -11,12 +11,11 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#BCBCBC">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/employerJobImage"
-            android:layout_width="match_parent"
+            android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -34,20 +33,19 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/textview"
-            android:textColor="#000000"
-            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/employerJobImage" />
 
         <TextView
             android:id="@+id/employerJobDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/textview"
-            android:textColor="#454040"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/employerJobName" />
 
@@ -57,8 +55,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/textview"
-            android:textColor="#000000"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/employerJobDescription" />
 
@@ -66,13 +66,11 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/apply"
-            app:layout_constraintBottom_toBottomOf="@+id/employerJobDescription"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/employerJobDescription" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
