--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_home" />
 
 <!--    <item-->
+<!--        android:id="@+id/nav_organization_home"-->
+<!--        android:icon="@drawable/ic_home_black_24dp"-->
+<!--        android:title="@string/title_home" />-->
+
+<!--    <item-->
 <!--        android:id="@+id/nav_dashboard"-->
 <!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
 <!--        android:title="@string/title_dashboard" />-->
