--- a/app/src/main/res/layout/recycler_employer_job.xml
+++ b/app/src/main/res/layout/recycler_employer_job.xml
@@ -15,11 +15,9 @@
 
         <ImageView
             android:id="@+id/employerJobImage"
-            android:layout_width="125dp"
+            android:layout_width="match_parent"
             android:layout_height="125dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
