--- a/app/src/main/res/layout/fragment_employer_home_detail.xml
+++ b/app/src/main/res/layout/fragment_employer_home_detail.xml
@@ -12,16 +12,14 @@
 
         <ImageView
             android:id="@+id/employerJobImageDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="125dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars"
-            android:contentDescription="TODO" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/employerJobNameDetail"
