--- a/app/src/main/res/layout/recycler_organization_job.xml
+++ b/app/src/main/res/layout/recycler_organization_job.xml
@@ -15,16 +15,16 @@
 
         <ImageView
             android:id="@+id/organizationJobImage"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/todo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars"
-            android:contentDescription="@string/todo" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/organizationJobName"
@@ -35,7 +35,6 @@
             android:layout_marginBottom="8dp"
             android:text="@string/textview"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/organizationJobImage"
             app:layout_constraintTop_toTopOf="parent" />
 
