--- a/app/src/main/res/layout/fragment_employer_home_detail.xml
+++ b/app/src/main/res/layout/fragment_employer_home_detail.xml
@@ -14,63 +14,148 @@
             android:id="@+id/employerJobImageDetail"
             android:layout_width="match_parent"
             android:layout_height="125dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/employerBackBtnDetail"
+            tools:ignore="ImageContrastCheck"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/employerJobNameDetail"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView13"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:layout_marginBottom="8dp"
+            android:text="@string/job_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/employerJobNameDetail"
+            app:layout_constraintEnd_toStartOf="@+id/employerJobNameDetail"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/employerJobNameDetail" />
+
+        <TextView
+            android:id="@+id/employerJobNameDetail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text=""
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView13"
             app:layout_constraintTop_toBottomOf="@+id/employerJobImageDetail" />
 
         <TextView
-            android:id="@+id/employerJobDescriptionDetail"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:layout_marginBottom="8dp"
+            android:text="@string/job_des"
+            app:layout_constraintBottom_toBottomOf="@+id/employerJobDescriptionDetail"
+            app:layout_constraintEnd_toStartOf="@+id/employerJobDescriptionDetail"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/employerJobDescriptionDetail" />
+
+        <TextView
+            android:id="@+id/employerJobDescriptionDetail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text=""
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/employerJobNameDetail" />
 
         <TextView
-            android:id="@+id/employerJobAreaDetail"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView16"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:layout_marginBottom="8dp"
+            android:text="@string/areacity"
+            app:layout_constraintBottom_toBottomOf="@+id/employerJobAreaDetail"
+            app:layout_constraintEnd_toStartOf="@+id/employerJobAreaDetail"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/employerJobAreaDetail" />
+
+        <TextView
+            android:id="@+id/employerJobAreaDetail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text=""
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView16"
             app:layout_constraintTop_toBottomOf="@+id/employerJobDescriptionDetail" />
 
         <TextView
-            android:id="@+id/employerJobSpecialistDetail"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView20"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:layout_marginBottom="8dp"
+            android:text="@string/job_specialist"
+            app:layout_constraintBottom_toBottomOf="@+id/employerJobSpecialistDetail"
+            app:layout_constraintEnd_toStartOf="@+id/employerJobSpecialistDetail"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/employerJobSpecialistDetail" />
+
+        <TextView
+            android:id="@+id/employerJobSpecialistDetail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text=""
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView20"
             app:layout_constraintTop_toBottomOf="@+id/employerJobAreaDetail" />
 
         <TextView
-            android:id="@+id/employerJobPayRateDetail"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView21"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:layout_marginBottom="8dp"
+            android:text="@string/job_payrate"
+            app:layout_constraintBottom_toBottomOf="@+id/employerJobPayRateDetail"
+            app:layout_constraintEnd_toStartOf="@+id/employerJobPayRateDetail"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/employerJobPayRateDetail" />
+
+        <TextView
+            android:id="@+id/employerJobPayRateDetail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text=""
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView21"
             app:layout_constraintTop_toBottomOf="@+id/employerJobSpecialistDetail" />
 
         <Button
@@ -79,7 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Button"
+            android:text="@string/apply"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -87,12 +172,16 @@
             android:id="@+id/employerBackBtnDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="8dp"
+            android:background="#0000FFFF"
             android:contentDescription="@string/backButton"
+            android:minWidth="48dp"
             android:minHeight="48dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/baseline_arrow_back_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
