--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/nav_post">
-<!--    app:startDestination="@+id/nav_employer_home">-->
-<!--    app:startDestination="@+id/navigation_home"-->
+    <!--    app:startDestination="@+id/nav_employer_home">-->
+    <!--    app:startDestination="@+id/navigation_home"-->
 
 
     <fragment
@@ -63,7 +63,7 @@
         tools:layout="@layout/activity_login" />
     <fragment
         android:id="@+id/nav_search"
-        android:name="my.edu.tarc.quickhire.ui.searchandPost.SearchFragment"
+        android:name="my.edu.tarc.quickhire.ui.SearchandPost.SearchFragment"
         android:label="@string/title_search" />
     <fragment
         android:id="@+id/nav_organization_home"
@@ -111,7 +111,7 @@
         tools:layout="@layout/fragment_notification_detail2" />
     <fragment
         android:id="@+id/nav_post"
-        android:name="my.edu.tarc.quickhire.ui.searchandPost.PostingFragment"
+        android:name="my.edu.tarc.quickhire.ui.SearchandPost.PostingFragment"
         android:label="@string/title_post" />
     <fragment
         android:id="@+id/nav_employer_home_detail"
