--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -64,7 +64,11 @@
     <fragment
         android:id="@+id/nav_search"
         android:name="my.edu.tarc.quickhire.ui.SearchandPost.SearchFragment"
-        android:label="@string/title_search" />
+        android:label="@string/title_search" >
+        <action
+            android:id="@+id/action_nav_search_to_nav_employer_home_detail"
+            app:destination="@id/nav_employer_home_detail" />
+    </fragment>
     <fragment
         android:id="@+id/nav_organization_home"
         android:name="my.edu.tarc.quickhire.ui.home.OrganizationHomeFragment"
