--- a/app/src/main/res/layout/fragment_organization_home.xml
+++ b/app/src/main/res/layout/fragment_organization_home.xml
@@ -72,7 +72,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="#0000FFFF"
         android:contentDescription="@string/settings"
+        android:minWidth="48dp"
         android:minHeight="48dp"
         android:src="@drawable/baseline_settings_24"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
