--- a/app/src/main/res/layout/fragment_employer_home_detail.xml
+++ b/app/src/main/res/layout/fragment_employer_home_detail.xml
@@ -176,7 +176,7 @@
                 android:layout_height="match_parent">
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/detailApplyButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
