apply button function

--- a/app/src/main/res/layout/fragment_employer_home_detail.xml
+++ b/app/src/main/res/layout/fragment_employer_home_detail.xml
@@ -31,7 +31,7 @@
             <ImageView
                 android:id="@+id/employerJobImageDetail"
                 android:layout_width="match_parent"
-                android:layout_height="125dp"
+                android:layout_height="200dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
@@ -73,6 +73,8 @@
                     android:text=""
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView13"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -84,6 +86,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/job_des"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toStartOf="@+id/employerJobDescriptionDetail"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/employerJobDescriptionDetail" />
@@ -95,6 +99,8 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text=""
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toBottomOf="@+id/employerJobNameDetail" />
@@ -106,6 +112,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/areacity"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toStartOf="@+id/employerJobAreaDetail"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/employerJobAreaDetail" />
@@ -117,6 +125,8 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text=""
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView16"
                     app:layout_constraintTop_toBottomOf="@+id/employerJobDescriptionDetail" />
@@ -128,6 +138,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/job_specialist"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toStartOf="@+id/employerJobSpecialistDetail"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/employerJobSpecialistDetail" />
@@ -139,6 +151,8 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text=""
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView20"
                     app:layout_constraintTop_toBottomOf="@+id/employerJobAreaDetail" />
@@ -151,6 +165,8 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:text="@string/job_payrate"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/employerJobPayRateDetail"
                     app:layout_constraintStart_toStartOf="parent"
@@ -164,6 +180,8 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:text=""
+                    android:textColor="#000000"
+                    android:textSize="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView21"
