--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-<!--    <item-->
-<!--        android:id="@+id/nav_employer_home"-->
-<!--        android:icon="@drawable/ic_home_black_24dp"-->
-<!--        android:title="@string/title_home" />-->
+    <item
+        android:id="@+id/nav_employer_home"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_home" />
 
     <item
         android:id="@+id/nav_organization_home"
@@ -21,10 +21,10 @@
 <!--        android:icon="@drawable/ic_notifications_black_24dp"-->
 <!--        android:title="@string/title_notifications" />-->
 
-    <item
-        android:id="@+id/nav_notification"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+<!--    <item-->
+<!--        android:id="@+id/nav_notification"-->
+<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
+<!--        android:title="@string/title_notifications" />-->
 
     <item
         android:id="@+id/nav_profile"
