--- a/app/src/main/res/layout/fragment_posting.xml
+++ b/app/src/main/res/layout/fragment_posting.xml
@@ -42,7 +42,7 @@
                 android:layout_width="76dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#7A7676"
                 android:contentDescription="This is my image button"
                 android:padding="14dp"
                 android:src="@drawable/baseline_upload_24" />
